fix: changing grid from areas to specific row/columns' settings

--- a/tributePage/css/root.css
+++ b/tributePage/css/root.css
@@ -5,7 +5,8 @@
 
 html {
     font-size: var(--page-font-size, 20px);
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+}
+
+*:focus {
+    outline: 0.15em solid black;
 }
