--- a/tributePage/css/styles.css
+++ b/tributePage/css/styles.css
@@ -1,6 +1,8 @@
 @import url('./root.css');
 @import url('./accessibility.css');
 @import url('./material.css');
+@import url('./layout.css');
+@import url('./timeline.css');
 
 body {
     background-color: white;
