--- a/tributePage/css/styles.css
+++ b/tributePage/css/styles.css
@@ -3,6 +3,7 @@
 @import url('./material.css');
 @import url('./layout.css');
 @import url('./timeline.css');
+@import url('./challenge.css');
 
 body {
     background-color: white;
@@ -22,7 +23,7 @@ h3,
 h4,
 h5 {
     margin: 2.75rem 0 1rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 400;
     line-height: 1.15;
 }
@@ -49,6 +50,7 @@ h5 {
 }
 
 small,
-.text_small {
+.text-small,
+.text-small * {
     font-size: 0.8em;
 }
