--- a/tributePage/css/layout.css
+++ b/tributePage/css/layout.css
@@ -12,24 +12,28 @@ body>* {
 }
 
 #header {
-    background-color: lightcoral;
-    background-image: url('../img/britney_spears_photoshot_for_kenzo_1.jpg');
+    background-color: var(--primary-color);
+    background-image: url('../img/britney_spears_photoshot_for_kenzo_2.jpg');
+    background-position: top right;
     background-size: cover;
+    z-index: 1;
 }
 
 #nav {
-    background-color: lightgreen;
+    background-color: var(--light-color);
+    z-index: 2;
+    /* display: none; */
 }
 
 #main {
-    background-color: lightblue;
+    background-color: var(--primary-color);
 }
 
 #footer {
-    background-color: lightcoral;
+    background-color: var(--light-color-darken2);
 }
 
-@media (max-width: 720px) {
+@media (max-width: 1023px) {
     body {
         grid-template-areas:
             "nav"
@@ -48,6 +52,11 @@ body>* {
         grid-area: nav;
     }
 
+    .nav-fixed {
+        width: 100%;
+        position: fixed;
+    }
+
     #main {
         grid-area: main;
     }
@@ -59,7 +68,7 @@ body>* {
 
 @media (min-width: 1024px) {
     body {
-        grid-template-columns: 1fr 2fr;
+        grid-template-columns: 1fr 3fr;
         grid-template-rows: 1fr 1fr;
         grid-gap: 0em;
         overflow: hidden;
