--- a/tributePage/css/styles.css
+++ b/tributePage/css/styles.css
@@ -4,13 +4,15 @@
 @import url('./layout.css');
 @import url('./timeline.css');
 @import url('./challenge.css');
+@import url('./header.css');
+@import url('./nav.css');
 
 body {
-    background-color: white;
+    background-color: var(--light-color);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     line-height: 1.45;
-    color: #333;
+    color: var(--page-color);
 }
 
 p {
