Final tributePage and codes of Functional Programming

--- a/tributePage/css/material.css
+++ b/tributePage/css/material.css
@@ -21,5 +21,6 @@
     -moz-osx-font-smoothing: grayscale;
 
     /* Support for IE. */
+    -webkit-font-feature-settings: 'liga';
     font-feature-settings: 'liga';
 }
