--- a/tributePage/css/header.css
+++ b/tributePage/css/header.css
@@ -1,6 +1,13 @@
 #header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
     align-items: flex-end;
     overflow: hidden;
     background-color: var(--dark-color);
@@ -10,6 +17,8 @@
 .shadow {
     width: 100%;
     height: 100%;
+    background: -webkit-linear-gradient(235deg, var(--primary-color), transparent, var(--secondary-color));
+    background: -o-linear-gradient(235deg, var(--primary-color), transparent, var(--secondary-color));
     background: linear-gradient(215deg, var(--primary-color), transparent, var(--secondary-color));
     position: absolute;
     z-index: -1;
