--- a/tributePage/css/layout.css
+++ b/tributePage/css/layout.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    display: -ms-grid;
     display: grid;
     height: 100vh;
     width: auto;
@@ -45,7 +47,7 @@ body>* {
 
     #header {
         grid-area: header;
-        min-height: 200px;
+        min-height: 300px;
     }
 
     #nav {
@@ -66,16 +68,64 @@ body>* {
     }
 }
 
+@media (max-width: 1023px) {
+    #header {
+        -ms-grid-row: 3;
+        -ms-grid-column: 1;
+    }
+
+    #nav {
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+    }
+
+    #main {
+        -ms-grid-row: 5;
+        -ms-grid-column: 1;
+    }
+
+    #footer {
+        -ms-grid-row: 7;
+        -ms-grid-column: 1;
+    }
+}
+
 @media (min-width: 1024px) {
     body {
+        -ms-grid-columns: 1fr 0em 3fr;
         grid-template-columns: 1fr 3fr;
+        -ms-grid-rows: 1fr 0em 1fr;
         grid-template-rows: 1fr 1fr;
         grid-gap: 0em;
         overflow: hidden;
     }
 
+    body>*:nth-child(1) {
+        -ms-grid-row: 1;
+        -ms-grid-column: 1;
+    }
+
+    body>*:nth-child(2) {
+        -ms-grid-row: 1;
+        -ms-grid-column: 3;
+    }
+
+    body>*:nth-child(3) {
+        -ms-grid-row: 3;
+        -ms-grid-column: 1;
+    }
+
+    body>*:nth-child(4) {
+        -ms-grid-row: 3;
+        -ms-grid-column: 3;
+    }
+
     #main {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
         grid-column: 2/3;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 3;
         grid-row: 1/4;
         overflow-y: auto;
     }
