--- a/technicalDocumentationPage/css/index.css
+++ b/technicalDocumentationPage/css/index.css
@@ -1657,12 +1657,15 @@ h1 {
   font-size: 3.5rem;
 }
 
-.first-section h1 {
-  margin-top: 4.53125rem;
+.main-section header {
+  font-size: 2.3125rem;
 }
 
-.first-section img {
-  width: 140%;
+pre {
+  color: white;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  overflow-x: auto;
 }
 
 * {
@@ -1689,22 +1692,7 @@ img {
 
 nav.row {
   background: white;
-  height: 4.53125rem;
-}
-
-main > section {
-  width: 100%;
-  height: 100vh;
-}
-
-pre {
-  -moz-tab-size: 20;
-    -o-tab-size: 20;
-       tab-size: 20;
-  color: white;
-  padding: 1rem;
-  border-radius: 0.25rem;
-  word-wrap: wrap;
+  height: 7.4375rem;
 }
 
 a {
