--- a/technicalDocumentationPage/css/index.sass
+++ b/technicalDocumentationPage/css/index.sass
@@ -1,11 +1,11 @@
-@import 'variables'
 @import 'functions'
+@import 'variables'
 @import 'placeholders'
 @import 'responsive12grid'
 @import 'colors'
 @import 'font_sizes'
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
-@import 'index/first_section'
+@import 'index/challenge'
 
 *
     box-sizing: border-box
@@ -29,23 +29,9 @@ nav.row
     height: $nav-bar-height
     @extend %centralize-all
 
-main > section
-    width: 100%
-    height: 100vh
-
-
 // :focus {
 //   width: min-content;
 // }    
-
-
-pre
-    tab-size: 20
-    // background: #032f62
-    color: white
-    padding: 1rem
-    border-radius: 0.25rem
-    word-wrap: wrap
 
 a
     text-decoration: none
