--- a/technicalDocumentationPage/css/_font_sizes.sass
+++ b/technicalDocumentationPage/css/_font_sizes.sass
@@ -1,9 +1,7 @@
 $html-font-size: 1rem
 
-$sizes: (6, 9, 14, 22, 35, 56)
-$i: 6
-
-@each $size in $sizes
-    h#{$i}
-        font-size: calculateRem($size)
-    $i: $i - 1
+// HEADINGS FONT-SIZES
+$h-font-sizes: (h1: golden67, h2: golden50, h3: golden37, h4: golden28, h5: golden21, h6: golden16)
+@each $h-key, $h-value in $h-font-sizes
+    #{$h-key}
+      font-size: map-get($goldens-map, $h-value)
