--- a/technicalDocumentationPage/css/_variables.sass
+++ b/technicalDocumentationPage/css/_variables.sass
@@ -1,9 +1,14 @@
-@function create-var-dynamically-using-map($list, $base_name_for_keys)
+
+@function calculateRem($size)
+  $remSize: $size / 16
+  @return #{$remSize}rem
+
+@function create-var-dynamically-using-map($list, $base-name-for-keys)
     $map: ()
     @for $i from 1 through length($list)
         $item: nth($list, $i)
         $value: calculateRem($item)
-        $key: "#{$base_name_for_keys}#{$item}"
+        $key: "#{$base-name-for-keys}#{$item}"
         $map: map-merge($map, ($key: $value)) 
     @return $map
 
@@ -11,3 +16,4 @@ $goldens: (12, 16, 21, 28, 37, 50, 67, 89, 119)
 $goldens-map: create-var-dynamically-using-map($goldens, "golden")
 
 $nav-bar-height: map-get($goldens-map, 'golden119')
+  
