--- a/technicalDocumentationPage/css/_functions.sass
+++ b/technicalDocumentationPage/css/_functions.sass
@@ -1,3 +1,12 @@
 @function calculateRem($size)
   $remSize: $size / 16
   @return #{$remSize}rem
+
+@function create-var-dynamically-using-map($list, $base-name-for-keys)
+    $map: ()
+    @for $i from 1 through length($list)
+        $item: nth($list, $i)
+        $value: calculateRem($item)
+        $key: "#{$base-name-for-keys}#{$item}"
+        $map: map-merge($map, ($key: $value)) 
+    @return $map
