--- a/technicalDocumentationPage/css/_variables.sass
+++ b/technicalDocumentationPage/css/_variables.sass
@@ -1,16 +1,4 @@
-
-@function calculateRem($size)
-  $remSize: $size / 16
-  @return #{$remSize}rem
-
-@function create-var-dynamically-using-map($list, $base-name-for-keys)
-    $map: ()
-    @for $i from 1 through length($list)
-        $item: nth($list, $i)
-        $value: calculateRem($item)
-        $key: "#{$base-name-for-keys}#{$item}"
-        $map: map-merge($map, ($key: $value)) 
-    @return $map
+$media_breakpoints_sizes: (xs: 0px, sm: 600px, md: 960px, lg: 1280px, xl: 1920px)
 
 $goldens: (12, 16, 21, 28, 37, 50, 67, 89, 119)
 $goldens-map: create-var-dynamically-using-map($goldens, "golden")
