--- a/technicalDocumentationPage/css/_font_sizes.sass
+++ b/technicalDocumentationPage/css/_font_sizes.sass
@@ -1,4 +1,5 @@
 $html-font-size: 1rem
+$line-height: map-get($goldens-map, golden28)
 
 // HEADINGS FONT-SIZES
 $h-font-sizes: (h1: golden67, h2: golden50, h3: golden37, h4: golden28, h5: golden21, h6: golden16)
