--- a/technicalDocumentationPage/css/_main_styles.sass
+++ b/technicalDocumentationPage/css/_main_styles.sass
@@ -11,6 +11,12 @@ body
     font-weight: normal
     // overflow-x: hidden
 
+body p, body li
+    line-height: $line-height
+
+body main * > *
+    margin: 1rem 0
+
 img
     width: 100%
     position: relative
